--- a/index.html
+++ b/index.html
@@ -43,38 +43,87 @@
             </div>
             <div class="feature">
                 <div class="img"><img src="images/noah-wetering.jpg" alt="" width="330px" height="330px"></div>
-                 <h6 class="clr">Features</h6>
+                <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
                 <div class="img"><img src="images/mark-harrison.jpg" alt="" width="330px" height="330px"></div>
-                 <h6 class="clr">Features</h6>
+                <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
-            
-            
+
+
             <div class="feature">
                 <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="330px" height="330px"></div>
-                 <h6 class="clr">Features</h6>
+                <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
                 <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="330px" height="330px"></div>
-                 <h6 class="clr">Features</h6>
+                <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
                 <div class="img"><img src="images/enter.png" alt="" width="330px" height="330px"></div>
-                 <h6 class="clr">Features</h6>
+                <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
         </div>
+        <div class="trending">
+            <h1>Trendings Now</h1>
+            <div class="tom">
+                <div class="draw"><img src="images/trae-gould.jpg" alt="" width="350px"></div>
+                <div class="machine">
+                    <h2 class="clring">MateLabs mixes machine learning with IFTTT</h2>
+                    <p class="text">If you’ve ever wanted to train a machine learning model and integrate it with IFTTT, you now can with a new offering from MateLabs. MateVerse, a platform where novices can spin out machine...If you’ve ever wanted to train a machine learning model and integrate it with IFTTT, you now can with a new offering from MateLabs. MateVerse, a platform where novices can spin out machine... Read More</p>
+                </div>
+                <div class="hanks">
+                </div>
+                <div class="drawn">
+                    <h4>Tom Hanks
+                        Drawn on 23 Jan</h4>
+                </div>
+
+            </div>
+            <div class="tom">
+                <div class="draw"><img src="images/mark-harrison.jpg" alt="" width="350px"></div>
+                <div class="machine">
+                    <h2 class="clring">US Venture investment ticks up in Q2 2017</h2>
+                    <p class="text">Venture investment in U.S. startups rose sequentially in the second quarter of 2017, boosted by large, late-stage financings and a few outsized early-stage rounds in tech and healthcare..enture investment in U.S. startups rose sequentially in the second quarter of 2017, boosted by large, late-stage financings and a few outsized early-stage rounds in tech and healthcare.. Read More</p>
+                </div>
+                <div class="hanks">
+                </div>
+                <div class="drawn">
+                    <h4>Tom Hanks
+                        Drawn on 23 Jan</h4>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="gallery">
+            <h1  class="stay">Stay tuned with our fresh stories
+            </h1>
+            <div class="img-vik"><div class="change"><h6 align="left">Climate Change</h6>
+            <h2 align="left">
+Stellar Partnership</h2></div></div>
+            <div class="img-rez"><div class="change"><h6 align="left">Save The World</h6>
+            <h2 align="left">
+Digital Currency</h2></div></div>
+            <div class="img-paw"><div class="change"><h6 align="left">Applications Companies</h6>
+            <h2 align="left">
+Blockchain Explained</h2></div></div>
+            <div class="img-mark"><div class="change"><h6 align="left">RFID Morphics</h6>
+            <h2 align="left">
+A Robot is Your Co-worker</h2></div></div>
+        </div>
     </div>
+
 
 </body>
 </html>
