--- a/index.html
+++ b/index.html
@@ -107,22 +107,135 @@
 
         </div>
         <div class="gallery">
-            <h1  class="stay">Stay tuned with our fresh stories
+            <h1 class="stay">Stay tuned with our fresh stories
             </h1>
-            <div class="img-vik"><div class="change"><h6 align="left">Climate Change</h6>
-            <h2 align="left">
-Stellar Partnership</h2></div></div>
-            <div class="img-rez"><div class="change"><h6 align="left">Save The World</h6>
-            <h2 align="left">
-Digital Currency</h2></div></div>
-            <div class="img-paw"><div class="change"><h6 align="left">Applications Companies</h6>
-            <h2 align="left">
-Blockchain Explained</h2></div></div>
-            <div class="img-mark"><div class="change"><h6 align="left">RFID Morphics</h6>
-            <h2 align="left">
-A Robot is Your Co-worker</h2></div></div>
+            <div class="img-vik">
+                <div class="change">
+                    <h6 align="left">Climate Change</h6>
+                    <h2 align="left">
+                        Stellar Partnership</h2>
+                </div>
+            </div>
+            <div class="img-rez">
+                <div class="change">
+                    <h6 align="left">Save The World</h6>
+                    <h2 align="left">
+                        Digital Currency</h2>
+                </div>
+            </div>
+            <div class="img-paw">
+                <div class="change">
+                    <h6 align="left">Applications Companies</h6>
+                    <h2 align="left">
+                        Blockchain Explained</h2>
+                </div>
+            </div>
+            <div class="img-mark">
+                <div class="change">
+                    <h6 align="left">RFID Morphics</h6>
+                    <h2 align="left">
+                        A Robot is Your Co-worker</h2>
+                </div>
+            </div>
         </div>
+        <div class="author">
+            <h1 class="stay">Our authore</h1>
+            <div class="worker">
+                <div class="mark">
+
+                    <div class="img-john">
+                        <h4 class="mj">Mark Johnson
+                        </h4>
+
+                    </div>
+                    <div class="mark-det">
+                        <div class="line"></div>
+                        <h2 class="ux">UX Designer</h2>
+                        <div class="table">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                                <tr>
+                                    <td align="left"><img src="images/settings.png" alt=""></td>
+                                    <td align="left">Skilles</td>
+                                    <td align="right">UI, UX, Creativity</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/running.png" alt=""></td>
+                                    <td align="left">Hobbies</td>
+                                    <td align="right">Photography</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/bar-chart.png" alt=""></td>
+                                    <td align="left">Level</td>
+                                    <td align="right">...</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="mark">
+                    <div class="img-dylan">
+                        <h4 class="mj">Mark Johnson
+                        </h4>
+                    </div>
+                    <div class="mark-det">
+                        <div class="line"></div>
+                        <h2 class="ux">UX Designer</h2>
+                        <div class="table">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                                <tr>
+                                    <td align="left"><img src="images/settings.png" alt=""></td>
+                                    <td align="left">Skilles</td>
+                                    <td align="right">UI, UX, Creativity</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/running.png" alt=""></td>
+                                    <td align="left">Hobbies</td>
+                                    <td align="right">Photography</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/bar-chart.png" alt=""></td>
+                                    <td align="left">Level</td>
+                                    <td align="right">...</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="mark">
+                    <div class="img-mila">
+                        <h4 class="mj">Mark Johnson
+                        </h4>
+                    </div>
+                    <div class="mark-det">
+                        <div class="line"></div>
+                        <h2 class="ux">UX Designer</h2>
+                        <div class="table">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                                <tr>
+                                    <td align="left"><img src="images/settings.png" alt=""></td>
+                                    <td align="left">Skilles</td>
+                                    <td align="right">UI, UX, Creativity</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/running.png" alt=""></td>
+                                    <td align="left">Hobbies</td>
+                                    <td align="right">Photography</td>
+                                </tr>
+                                <tr>
+                                    <td align="left"><img src="images/bar-chart.png" alt=""></td>
+                                    <td align="left">Level</td>
+                                    <td align="right">...</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
+
 
 
 </body>
