--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="menus">
                 <div class="start">
                     <h3 align="center">Getting started</h3>
+                    
                 </div>
                 <div class="start">
                     <h3 align="center">Sections</h3>
@@ -28,27 +29,27 @@
         <div class="new">
             <h1 align="center">A Place for Entrepreneurs to Share and Discover New Stories</h1>
             <div class="icon">
-                <div class="insta"><img src="images/twitter.png" alt="" width="50px"></div>
-                <div class="insta"><img src="images/instagram.png" alt="" width="50px"></div>
+                <div class="insta"><img src="images/twitter.png" alt="" width="35px"></div>
+                <div class="insta"><img src="images/instagram.png" alt="" width="35px"></div>
             </div>
         </div>
     </div>
     <div class="enter">
         <div class="story">
             <div class="feature">
-                <div class="img"><img src="images/steven-roe.jpg" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/steven-roe.jpg" alt="" width="333px" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="333px" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="333px" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
@@ -56,19 +57,19 @@
 
 
             <div class="feature">
-                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="333x" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="333px" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/enter.png" alt="" width="330px" height="330px"></div>
+                <div class="img"><img src="images/enter.png" alt="" width="333px" height="330px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
@@ -146,13 +147,17 @@
                     <div class="img-john">
                         <h4 class="mj">Mark Johnson
                         </h4>
+                        <div class="setting">
+                            <img src="images/settings.png" alt="">
+                            <img src="images/_1.png" alt="" width="16px">
+                        </div>
 
                     </div>
                     <div class="mark-det">
                         <div class="line"></div>
                         <h2 class="ux">UX Designer</h2>
                         <div class="table">
-                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="9">
                                 <tr>
                                     <td align="left"><img src="images/settings.png" alt=""></td>
                                     <td align="left">Skilles</td>
@@ -174,23 +179,28 @@
                 </div>
                 <div class="mark">
                     <div class="img-dylan">
-                        <h4 class="mj">Mark Johnson
+                        <h4 class="mj">Dylan Wyatt
+
                         </h4>
+                        <div class="setting">
+                            <img src="images/settings.png" alt="">
+                            <img src="images/_1.png" alt="" width="16px">
+                        </div>
                     </div>
                     <div class="mark-det">
                         <div class="line"></div>
-                        <h2 class="ux">UX Designer</h2>
+                        <h2 class="ux">Team Lead</h2>
                         <div class="table">
-                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="9">
                                 <tr>
                                     <td align="left"><img src="images/settings.png" alt=""></td>
                                     <td align="left">Skilles</td>
-                                    <td align="right">UI, UX, Creativity</td>
+                                    <td align="right">Leadership</td>
                                 </tr>
                                 <tr>
                                     <td align="left"><img src="images/running.png" alt=""></td>
                                     <td align="left">Hobbies</td>
-                                    <td align="right">Photography</td>
+                                    <td align="right">Skiing, Chess</td>
                                 </tr>
                                 <tr>
                                     <td align="left"><img src="images/bar-chart.png" alt=""></td>
@@ -203,23 +213,27 @@
                 </div>
                 <div class="mark">
                     <div class="img-mila">
-                        <h4 class="mj">Mark Johnson
+                        <h4 class="mj">Mila Skylar
                         </h4>
+                        <div class="setting">
+                            <img src="images/settings.png" alt="">
+                            <img src="images/_1.png" alt="" width="16px">
+                        </div>
                     </div>
                     <div class="mark-det">
                         <div class="line"></div>
-                        <h2 class="ux">UX Designer</h2>
+                        <h2 class="ux">Content writer</h2>
                         <div class="table">
-                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="15">
+                            <table border="0" , height="100%" , width="100%" , align="center" cellpadding="3" cellspacing="9">
                                 <tr>
                                     <td align="left"><img src="images/settings.png" alt=""></td>
                                     <td align="left">Skilles</td>
-                                    <td align="right">UI, UX, Creativity</td>
+                                    <td align="right">Communication</td>
                                 </tr>
                                 <tr>
                                     <td align="left"><img src="images/running.png" alt=""></td>
                                     <td align="left">Hobbies</td>
-                                    <td align="right">Photography</td>
+                                    <td align="right">Reading, Writing</td>
                                 </tr>
                                 <tr>
                                     <td align="left"><img src="images/bar-chart.png" alt=""></td>
@@ -231,6 +245,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="love">
+                <h1 class="stay">Show us some love</h1>
+        
         </div>
 
 
