shadow and redius done

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     <div class="enter">
         <div class="story">
             <div class="feature">
-                <div class="img"><img src="images/steven-roe.jpg" alt="" width="333px" height="330px"></div>
+                <div class="img"><img src="images/steven-roe.jpg" alt="" width="339.68px" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="333px" height="330px"></div>
+                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="339.68px" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="333px" height="330px"></div>
+                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="339.68px" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
@@ -57,19 +57,19 @@
 
 
             <div class="feature">
-                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="333x" height="330px"></div>
+                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="339.68x" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="333px" height="330px"></div>
+                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="339.68px" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/enter.png" alt="" width="333px" height="330px"></div>
+                <div class="img"><img src="images/enter.png" alt="" width="339.68px" height="380px"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
@@ -78,7 +78,7 @@
         <div class="trending">
             <h1>Trendings Now</h1>
             <div class="tom">
-                <div class="draw"><img src="images/trae-gould.jpg" alt="" width="350px"></div>
+                <div class="draw"><img src="images/trae-gould.jpg" alt="" width="350px" height="524.73px"></div>
                 <div class="machine">
                     <h2 class="clring">MateLabs mixes machine learning with IFTTT</h2>
                     <p class="text">If you’ve ever wanted to train a machine learning model and integrate it with IFTTT, you now can with a new offering from MateLabs. MateVerse, a platform where novices can spin out machine...If you’ve ever wanted to train a machine learning model and integrate it with IFTTT, you now can with a new offering from MateLabs. MateVerse, a platform where novices can spin out machine... Read More</p>
@@ -92,7 +92,7 @@
 
             </div>
             <div class="tom">
-                <div class="draw"><img src="images/mark-harrison.jpg" alt="" width="350px"></div>
+                <div class="draw"><img src="images/mark-harrison.jpg" alt="" width="350px" height="574.73px"></div>
                 <div class="machine">
                     <h2 class="clring">US Venture investment ticks up in Q2 2017</h2>
                     <p class="text">Venture investment in U.S. startups rose sequentially in the second quarter of 2017, boosted by large, late-stage financings and a few outsized early-stage rounds in tech and healthcare..enture investment in U.S. startups rose sequentially in the second quarter of 2017, boosted by large, late-stage financings and a few outsized early-stage rounds in tech and healthcare.. Read More</p>
