--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
         <div class="new">
             <h1 align="center">A Place for Entrepreneurs to Share and Discover New Stories</h1>
             <div class="icon">
-                <div class="insta"><img src="images/twitter.png" alt="" width="35px"></div>
-                <div class="insta"><img src="images/instagram.png" alt="" width="35px"></div>
+                <div class="insta"><img src="images/twitter.png" alt="" width="100%"></div>
+                <div class="insta"><img src="images/instagram.png" alt="" width="100%"></div>
             </div>
         </div>
     </div>
     <div class="enter">
         <div class="story">
             <div class="feature">
-                <div class="img"><img src="images/steven-roe.jpg" alt="" width="339.68px" height="380px" style="border-radius: 7px;"></div>
+                <div class="img"><img src="images/steven-roe.jpg" alt="" width="100%" height="380px" style="border-radius: 7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="339.68px" height="380px" style="border-radius: 7px;"></div>
+                <div class="img"><img src="images/noah-wetering.jpg" alt="" width="100%" height="380px" style="border-radius: 7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="339.68px" height="380px" style="border-radius: 7px;"></div>
+                <div class="img"><img src="images/mark-harrison.jpg" alt="" width="100%" height="380px" style="border-radius: 7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
@@ -58,19 +58,19 @@
 
 
             <div class="feature">
-                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="339.68x" height="380px" style="border-radius: 7px;"></div>
+                <div class="img"><img src="images/pawel-nolbert.jpg" alt="" width="100%" height="380px" style="border-radius: 7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="339.68px" height="380px" style="border-radius: 7px;"></div>
+                <div class="img"><img src="images/serge-kutuzov.jpg" alt="" width="100%" height="380px" style="border-radius: 7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
             </div>
             <div class="feature">
-                <div class="img"><img src="images/enter.png" alt="" width="339.68px" height="380px" style="7px;"></div>
+                <div class="img"><img src="images/enter.png" alt="" width="100%" height="380px" style="7px;"></div>
                 <h6 class="clr">Features</h6>
                 <h3 class="txt">That's One Way To Ditch Your Passenger</h3>
                 <p class="text">As near as we can tell, this guy must have thought he was going over backwards and tapped the rear...</p>
