--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
 </head>
 
 <body>
     <div class="head">
         <div class="nevi">
             <div class="blk">
-                <h2>BLK.Design System Pro</h2>
+               <a href="" class="blk-nav"><span class="blk-spn">BLK.</span>
+                "Design System PRO"
+        </a>
+                
             </div>
+            <div class="menus">
+                <ul class="menu-items">
+                    <li class="start-list">
+                        <a href="" class="menu-start-list">Getting started</a>
+                    </li>
+                    <li class="start-list">
+                        <a href="" class="menu-start-list" >Section</a>
+                    </li>
+                    <li class="start-list"><a href="" class="menu-start-list">Examples</a></li>
+                    <li class="start-list">
+                        <a href="" class="menu-start-list book"><p class="book-pera">Book Now</p></a>
+                    </li>
+                </ul>
+            </div>
+<!--
             <div class="menus">
                 <div class="start">
                     <h3 align="center">Getting started</h3>
@@ -26,6 +46,7 @@
                 </div>
                 <span class="now">Book Now</span>
             </div>
+-->
         </div>
         <div class="new">
             <h1 align="center">A Place for Entrepreneurs to Share and Discover New Stories</h1>
